<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    style="@style/layout_mw" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_logo_example"
        app:civ_border_color="@color/darker_pink"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/layout_ww"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        android:textColor="@color/lighter_black"
        android:textSize="16sp"
        android:transitionName="@string/username"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="@+id/img_profile" />

    <TextView
        android:id="@+id/tv_created"
        style="@style/layout_ww"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/layout_ww"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/tv_created"
        app:layout_constraintTop_toBottomOf="@+id/tv_created" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        style="@style/layout_mw"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" >

        <ImageView
            android:id="@+id/img_story"
            style="@style/layout_mw"
            android:layout_height="300dp"
            android:background="@drawable/story_example"
            android:transitionName="@string/selected_image"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/favorite"
        style="@style/layout_ww"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_favorite_border_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_image" />

    <ImageView
        android:id="@+id/share"
        style="@style/layout_ww"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_share_24"
        app:layout_constraintStart_toEndOf="@+id/favorite"
        app:layout_constraintTop_toBottomOf="@+id/cv_image" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/layout_mw"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/description_story"
        android:transitionName="description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>