<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_mm"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/layout_mw"
        android:padding="16dp" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile_detail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile_logo_example"
            app:civ_border_color="@color/darker_pink"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_detail"
            style="@style/layout_ww"
            android:layout_marginStart="16dp"
            android:text="@string/name"
            android:textColor="@color/lighter_black"
            android:textSize="16sp"
            android:transitionName="@string/username"
            app:layout_constraintStart_toEndOf="@+id/img_profile_detail"
            app:layout_constraintTop_toTopOf="@+id/img_profile_detail" />

        <TextView
            android:id="@+id/tv_created_detail"
            style="@style/layout_ww"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@+id/tv_name_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/layout_ww"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="@+id/tv_created_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_created_detail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image_detail"
            style="@style/layout_mw"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile_detail" >

            <ImageView
                android:id="@+id/img_story_detail"
                style="@style/layout_mw"
                android:layout_height="300dp"
                android:background="@drawable/story_example"
                android:transitionName="@string/selected_image"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/favorite"
            style="@style/layout_ww"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_favorite_border_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_image_detail" />

        <ImageView
            android:id="@+id/share"
            style="@style/layout_ww"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/baseline_share_24"
            app:layout_constraintStart_toEndOf="@+id/favorite"
            app:layout_constraintTop_toBottomOf="@+id/cv_image_detail" />

        <TextView
            android:id="@+id/tv_description_detail"
            style="@style/layout_mw"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/description_story"
            android:transitionName="description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>