<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_mm"
    tools:context=".ui.upload.UploadActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/layout_mw"
        android:padding="16dp" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_upload"
            style="@style/layout_mw"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar2">

            <ImageView
                android:id="@+id/iv_story"
                style="@style/layout_mw"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/baseline_image_24"
                app:layout_constraintStart_toStartOf="@+id/cv_upload"
                app:layout_constraintTop_toBottomOf="@+id/cv_upload" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_camera"
            style="@style/layout_ww"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/blue"
            android:drawableLeft="@drawable/baseline_camera_24"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="@+id/cv_upload"
            app:layout_constraintTop_toBottomOf="@+id/cv_upload" />

        <Button
            android:id="@+id/btn_gallery"
            style="@style/layout_ww"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/orange"
            android:drawableLeft="@drawable/baseline_image_24"
            android:text="@string/gallery"
            app:layout_constraintStart_toEndOf="@+id/btn_camera"
            app:layout_constraintTop_toBottomOf="@+id/cv_upload" />

        <ImageButton
            android:id="@+id/btn_upload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/circle"
            android:src="@drawable/baseline_send_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@+id/cv_upload" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_location"
            style="@style/layout_ww"
            android:layout_marginStart="8dp"
            android:text="@string/activate_location"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera" />
        
        <LinearLayout
            android:id="@+id/linear_layout"
            style="@style/layout_mw"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_location" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:civ_border_color="@color/blue"
                app:civ_border_width="2dp"
                android:src="@drawable/profile_logo_example" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_desc"
                style="@style/layout_mw"
                android:layout_marginStart="8dp">

                <EditText
                    android:id="@+id/edt_desc"
                    style="@style/layout_mw"
                    android:backgroundTint="@color/white"
                    android:inputType="textMultiLine"
                    android:hint="@string/description" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>